chat-api-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chat-api
  name: chat-api
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: chat-api
  type: ClusterIP
