chat-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-api
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                    name: chat-api
                    port:
                        number: 8080
